# toolbox

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: build-and-release.yml  ci.yml
backEnd/: .gitignore  CMakeLists.txt  build.bat  main.cpp
backEnd/src/: main.cpp
backEnd/src/httpServer/: httpServer.cpp  httpServer.h
backEnd/src/log/: log.cpp  log.h
backEnd/src/rc/: rc.cpp  rc.h  resource.rc
backEnd/src/setting/: setting.cpp  setting.h
backEnd/src/staticFile/: staticFile.cpp  staticFile.h
backEnd/src/template/: singleton.h
backEnd/src/tray/: tray.cpp  tray.h
backEnd/src/util/: util.cpp  util.h
backEnd/third/httpLib/: httplib.h
backEnd/third/inc/drogon/: version.h
backEnd/third/inc/openssl/: configuration.h  core_names.h
backEnd/third/lib/: jsoncpp.lib  libcurl.lib  trantor.lib  zip.lib  zlibstatic.lib
backEnd/third/libzip/: zip.h  zipconf.h
backEnd/third/zlib/: zconf.h  zlib.h
data/: record.txt
web/: .env  index.html  package.json  postbuild.js  vite.config.js
web/src/: App.vue  main.js  style.css
web/src/router/: index.js
web/src/utils/: loading.js  notification.js  request.js
web/src/views/: BaseConverter.vue  Settings.vue  TextFormatter.vue  TimeConverter.vue
